# N-Body-Simulation

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: 12648_40_km_MBA_state_vectors.csv  178_planets_and_moons_state_vectors.csv  19054_scenario1_state_vectors.csv  2678_20_km_state_vectors.csv  999_40_km_state_vectors.csv
dataset_converter/: CMakeLists.txt  README.md  main_preprocess.cpp
dataset_converter/data/: planets_and_moons.csv
dataset_converter/include/: approximation.hpp  constants.hpp  conversion.hpp  coordinates.hpp  io.hpp  orbit_class.hpp  preprocess.hpp
dataset_converter/include/detail/: utility.hpp
dataset_converter/src/: approximation.cpp  conversion.cpp  coordinates.cpp  io.cpp  orbit_class.cpp
dataset_converter/src/detail/: utility.cpp
src/: Definitions.hpp  main.cpp
src/nBodySimulation/simulationData/: Body.cpp  Body.h  InputParser.cpp  InputParser.h
src/simulationBackend/: BarnesHutAlgorithm.cpp  BarnesHutAlgorithm.hpp  NaiveAlgorithm.cpp  NaiveAlgorithm.hpp  SimulationInstance.cpp  SimulationInstance.hpp  nBodyAlgorithm.cpp  nBodyAlgorithm.hpp
src/simulationBackend/BarnesHutTreeAlgorithms/: BarnesHutOctree.cpp  BarnesHutOctree.hpp  ParallelOctreeTopDownSubtrees.cpp  ParallelOctreeTopDownSubtrees.hpp  ParallelOctreeTopDownSynchronized.cpp  ParallelOctreeTopDownSynchronized.hpp
src/simulationData/: Body.h  InputParser.cpp  InputParser.hpp  SimulationData.hpp
src/utility/: Configuration.cpp  Configuration.hpp  TimeConverter.cpp  TimeConverter.hpp  TimeMeasurement.cpp  TimeMeasurement.hpp
tests/: BarnesHutTest.cpp  InputParserTest.cpp  TimeConverterTest.cpp
